<resources>
    <string name="app_name">PlantDexV1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="SearchPlant_fragment_label">SearchPlant_fragment_label</string>
    <string name="MatchedListFragment">MatchedListFragment</string>
    <string name="login_label">login</string>
    <string name="register_label">registerfragment</string>
    <string name="Profile">Profile</string>
</resources>
