<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/login"
        android:name="com.example.plantdexv1.login"
        android:label="@string/login_label"
        tools:layout="@layout/activity_login"
        >
        <action
        android:id="@+id/loginFragment_to_FirstFragment"
        app:destination="@id/FirstFragment"/>
        >

        <action
            android:id="@+id/loginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"/>
        >
    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.plantdexv1.RegisterActivity"
        android:label="@string/register_label"
        tools:layout="@layout/activity_register"
        >
        <action
            android:id="@+id/registerFragment_to_loginFragment"
            app:destination="@id/login"/>
        >
    </fragment>


    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.plantdexv1.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/firstFragment_to_specificFragment"
            app:destination="@id/SpecifiedPlantFragment"/>

        <action
            android:id="@+id/firstFragment_to_profile_fragment"
            app:destination="@id/ProfileFragment"/>
    </fragment>

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.example.plantdexv1.ProfileFragment"
        android:label="profile_fragment_label"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/profile_fragment_to_first_fragment"
            app:destination="@id/FirstFragment"/>
        <action
            android:id="@+id/profile_fragment_to_specific_fragment"
            app:destination="@id/SpecifiedPlantFragment"/>

    </fragment>

    <fragment
        android:id="@+id/SpecifiedPlantFragment"
        android:name="com.example.plantdexv1.SearchPlant"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/activity_result_from_search">

        <action
            android:id="@+id/specific_fragment_to_profile_fragment"
            app:destination="@id/ProfileFragment"/>
        <!--
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
            -->
    </fragment>
</navigation>
